--- a/name/templates/file.html
+++ b/name/templates/file.html
@@ -6,7 +6,8 @@
 </head>
 <body>
     <text>
-        Hello, World!
+        <p>Hello, World!</p>
+        <p>От Сергея Петрова</p>
     </text>
 </body>
 </html>
